# pollen_api_dwd

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pollen_api_dwd/: __init__.py  client.py
tests/: test_client.py
